# cmake_tutorial

./: README.md
check_install/: CMakeLists.txt  check_install_1.cpp  check_install_2.cpp
cmake_tutorial1/: CMakeLists.txt
cmake_tutorial1/include/: test_install.h
cmake_tutorial1/src/: test_install.cpp
cmake_tutorial2/: CMakeLists.txt
cmake_tutorial2/include/: test_install_2.h
cmake_tutorial2/src/: test_install_2.cpp
